--- a/.env
+++ b/.env
@@ -1,6 +1,9 @@
+# MongoDB
 MONGODB_URI=mongodb+srv://duviertavera01:3SK6o5HM3g46zXSQ@cluster0.0bbblsp.mongodb.net/jylclean
+# JWT Secret (si usas autenticación)
 JWT_SECRET=tu_jwt_secret_super_seguro_aqui
-EMAIL_USER=tu_correo@gmail.com
-EMAIL_PASS=tu_password_de_aplicacion
-FRONTEND_URL=http://localhost:3000
+# Frontend URL para CORS
+FRONTEND_URL=http://localhost:3000, https://jylcleanco-front.vercel.app/
+# Servidor
 PORT=5000
+NODE_ENV=production
