--- a/package.json
+++ b/package.json
@@ -1,24 +1,25 @@
 {
   "name": "jylclean-backend",
   "version": "1.0.0",
-  "main": "src/server.js",
+  "description": "Backend para J&L Clean Co",
+  "main": "index.js",
+  "engines": {
+    "node": "18.x"
+  },
   "scripts": {
-    "start": "node src/server.js",
-    "dev": "nodemon src/server.js",
-    "vercel-build": "npm install"
+    "start": "node index.js",
+    "dev": "nodemon index.js",
+    "vercel-build": "echo 'Build successful'"
   },
   "dependencies": {
     "express": "^4.18.2",
-    "mongoose": "^7.0.0",
+    "mongoose": "^7.6.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
-    "jsonwebtoken": "^9.0.0",
+    "dotenv": "^16.3.1",
+    "jsonwebtoken": "^9.0.2",
     "bcryptjs": "^2.4.3"
   },
   "devDependencies": {
-    "nodemon": "^3.0.0"
-  },
-  "engines": {
-    "node": ">=18.0.0"
+    "nodemon": "^3.0.1"
   }
 }
